--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,6 +4,7 @@
             
             ARTICLE-ONE | sruthi menta
         </title>
+        <meta name="viewport" content="width=device-width" intital-scale="1"/>
     </head>
     <body>
         <div>
@@ -12,6 +13,7 @@
         </div>
        <div>
            <h3>article-one</h3>
+           sep 23, 2016
            
        </div>
        <div>
