--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -11,6 +11,9 @@
                 color: red;
                 font-family: sans-serif;
                 margin: 0 auto;
+                padding-top: 60px;
+                padding-left: 30px;
+                padding-right: 30px;
                 
             }
         </style>
