--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,16 +6,7 @@
         </title>
         <meta name="viewport" content="width=device-width" intital-scale="1"/>
         <style>
-            .container{
-                width: 800px;
-                color: red;
-                font-family: sans-serif;
-                margin: 0 auto;
-                padding-top: 60px;
-                padding-left: 30px;
-                padding-right: 30px;
-                
-            }
+  <link href="/ui/style.css" rel="stylesheet" />
         </style>
     </head>
     <body>
