[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -5,21 +5,26 @@
             ARTICLE-THREE | sruthi menta
         </title>
         <meta name="viewport" content="width=device-width" intital-scale="1"/>
+        <style>
+             <link href="/ui/style.css" rel="stylesheet" />
+        </style>
     </head>
     <body>
         <div>
    <a href="/">home</a>
    
         </div>
-       <div>
-           <h3>article-three</h3>
-           sep 13, 2016
-           
-       </div>
-       <div>
-           <p>
-                hello....how are you doing today?? this is article three
-              </p>
+        <div class="container">
+               <div>
+                   <h3>article-three</h3>
+                   sep 13, 2016
+                   
+               </div>
+               <div>
+                   <p>
+                        hello....how are you doing today?? this is article three
+                      </p>
+         </div>
  </div>
  </body>
 </html>
