[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -5,21 +5,26 @@
             ARTICLE-TWO | sruthi menta
         </title>
         <meta name="viewport" content="width=device-width" intital-scale="1"/>
+        <Style>
+             <link href="/ui/style.css" rel="stylesheet" />
+        </Style>
     </head>
     <body>
         <div>
    <a href="/">home</a>
    
         </div>
-       <div>
-           <h3>article-two</h3>
-           sep 13, 2016
-           
-       </div>
-       <div>
-           <p>
-                hello....how are you doing today?? this is article two
-              </p>
+        <div class="container">
+           <div>
+               <h3>article-two</h3>
+               sep 13, 2016
+               
+           </div>
+           <div>
+               <p>
+                    hello....how are you doing today?? this is article two
+                  </p>
+ </div>
  </div>
  </body>
 </html>
