--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! I am sruthi menta...this is my first webapp.
             making some changes...
         </div>
+        <script>
+            alert('hi..i am javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
