[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,6 +17,9 @@
         <script type="text/javascript" src="/ui/main.js">
         
         </script>
+        <script>
+            alert('hi');
+            </script>
        
     </body>
 </html>
