[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,7 @@
                    <h5><p>studying at stella maris college</p></h5>
                    <hr/>
                    <div class="footer">
-                       
+                       this button<button id="counter">click me</button>has clicked<span id="count">0`</span>
                    </div>
                 </div>
              
